force-app/main/default/objects/SurveyTaker__c/fields/Service_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Service_Delivery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Delivery</label>
    <referenceTo>Service_Delivery__c</referenceTo>
    <relationshipLabel>Surveys Taken</relationshipLabel>
    <relationshipName>Surveys_Taken</relationshipName>
    <type>Lookup</type>
</CustomField>