force-app/main/default/objects/SurveyTaker__c/fields/Survey_Taken_Count__c.field-meta.xml
<CustomField>
    <fullName>Survey_Taken_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Count up the number of Surveys Taken</inlineHelpText>
    <label>Survey Taken Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>