force-app/main/default/objects/SurveyTaker__c/fields/Taken_number__c.field-meta.xml
<CustomField>
    <fullName>Taken_number__c</fullName>
    <formula>IF(Taken__c = &apos;Yes&apos;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taken (number)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>