force-app/main/default/objects/SurveyTaker__c/listViews/Customer_Engagement_Surveys.listView-meta.xml
<ListView>
    <fullName>Customer_Engagement_Surveys</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Contact__c</columns>
    <columns>Survey__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Survey__c</field>
        <operation>equals</operation>
        <value>Customer Engagement Survey</value>
    </filters>
    <label>Customer Engagement Surveys</label>
</ListView>