force-app/main/default/objects/SurveyTaker__c/listViews/DLI_Surveys_Taken.listView-meta.xml
<ListView>
    <fullName>DLI_Surveys_Taken</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Service_Delivery__c</columns>
    <columns>Contact__c</columns>
    <columns>Survey__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Survey__c</field>
        <operation>startsWith</operation>
        <value>NVIDIA Deep Learning Institute</value>
    </filters>
    <label>DLI Surveys Taken</label>
    <language>en_US</language>
    <sharedTo>
        <role>DLI_Sales</role>
    </sharedTo>
</ListView>